--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                Email : info@mevalini.com
+                Email : mevalinisas@gmail.com
               </span>
             </a>
             <a href="">
@@ -86,13 +86,13 @@
                   <a class="nav-link" href="contact.html">Ingresa tu pedido</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="service.html">Rastea tu pedido</a>
+                  <a class="nav-link" href="service.html">Rastrea tu pedido</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html"> Sobre nosotros</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
+                  <a class="nav-link" href="https://www.mevalini.com/admin-order/#/"> <i class="fa fa-user" aria-hidden="true"></i> INICIAR SESIÓN</a>
                 </li>
               </ul>
             </div>
@@ -224,9 +224,8 @@
                         </h2>
           </div>
           <p>
-      Ingresa el codigo de tu pedido para saber donde esta 
-          </p>
-          <form action="">
+            Ingresa tu código único para que puedas realizar un seguimiento fácil y seguro de tu paquetería en todo momento.          </p>
+          <form action="service.html">
             <input type="text" placeholder="Enter Your Tracking Number" />
             <button type="submit">
               Buscar
@@ -244,8 +243,7 @@
             Nuestros  <span>Servicios</span>
           </h2>
           <p>
-            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-          </p>
+            Ingresa tu código único para que puedas realizar un seguimiento fácil y seguro de tu paquetería en todo momento.   </p>
         </div>
         <div class="row">
           <div class="col-md-6 ">
@@ -255,7 +253,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  ASESORIA PARA COMPRAS EN LINEA
+                  ASESORÍA PARA COMPRAS EN LÍNEA
                 </h5>
                 <p>
                   En MEVALINI Import Solutions S.A.S., comprendemos la importancia de tomar decisiones informadas al realizar compras en línea. Nuestro equipo de expertos está listo para brindarte asesoría personalizada, guiándote en la selección de productos que se adapten a tus necesidades y expectativas
@@ -291,7 +289,7 @@
                   REGISTRO DE COMPRAS
                 </h5>
                 <p>
-                  En MEVALINI Import Solutions S.A.S., nos ocupamos del proceso de registro de compras por ti. Solo necesitas realizar la compra en línea y ¡listo! Nosotros nos encargamos de registrarla y asignar un código único para que puedas realizar un seguimiento fácil y seguro a través de nuestra plataforma web. Tu única preocupación será disfrutar de tus productos internacionales mientras nosotros cuidamos de todo lo demás. 
+                  En MEVALINI Import Solutions S.A.S., nos ocupamos del proceso de registro de compras por ti. Solo necesitas realizar la compra en línea y ¡listo! Nosotros nos encargamos de registrarla y asignar un código único para que puedas realizar un seguimiento fácil y seguro a través de nuestra plataforma web. Tu única preocupación será disfrutar de tus productos internacionales mientras nosotros nos encargamos de todos los detalles. 
                 </p>
                 
               </div>
@@ -350,13 +348,13 @@
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call + 593 99 181 9910
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  info@mevalini.com
+                  mevalinisas@gmail.com
                 </span>
               </a>
             </div>
@@ -382,7 +380,7 @@
               Recuerda
             </h4>
             <p>
-          Es importante que al registrar tu producto se ingrese toda la informacion solicitada para que 
+          Es importante que al registrar tu producto se ingrese toda la información correspondiente para que de esta manera podamos tomar las medidas necesarias a la solicitud de cada paquetería. 
             </p>
           </div>
         </div>
@@ -413,9 +411,9 @@
         </div>
         <div class="col-md-6 col-lg-3 info_col ">
           <h4>
-            Rastea tu pedido
+            Rastrea tu pedido
           </h4>
-          <form action="#">
+          <form action="service.html">
             <input type="text" placeholder="Ingresa el codigo de tu pedido" />
             <button type="submit">
               Buscar 
