--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                Email : info@mevalini.com
+                Email : mevalinisas@gmail.com
               </span>
             </a>
             <a href="">
@@ -77,6 +77,7 @@
               <span class=""> </span>
             </button>
 
+       
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
@@ -86,13 +87,13 @@
                   <a class="nav-link" href="contact.html">Ingresa tu pedido</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="service.html">Rastea tu pedido</a>
+                  <a class="nav-link" href="service.html">Rastrea tu pedido</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html"> Sobre nosotros</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
+                  <a class="nav-link" href="https://www.mevalini.com/admin-order/#/"> <i class="fa fa-user" aria-hidden="true"></i> INICIAR SESIÓN</a>
                 </li>
               </ul>
             </div>
@@ -179,13 +180,13 @@
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call + 593 99 181 9910
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  info@mevalini.com
+                  mevalinisas@gmail.com
                 </span>
               </a>
             </div>
@@ -211,7 +212,7 @@
               Recuerda
             </h4>
             <p>
-          Es importante que al registrar tu producto se ingrese toda la informacion solicitada para que 
+          Es importante que al registrar tu producto se ingrese toda la información correspondiente para que de esta manera podamos tomar las medidas necesarias a la solicitud de cada paquetería. 
             </p>
           </div>
         </div>
@@ -242,9 +243,9 @@
         </div>
         <div class="col-md-6 col-lg-3 info_col ">
           <h4>
-            Rastea tu pedido
+            Rastrea tu pedido
           </h4>
-          <form action="#">
+          <form action="service.html">
             <input type="text" placeholder="Ingresa el codigo de tu pedido" />
             <button type="submit">
               Buscar 
