--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                Email : info@mevalini.com
+                Email : mevalinisas@gmail.com
               </span>
             </a>
             <a href="">
@@ -77,6 +77,7 @@
               <span class=""> </span>
             </button>
 
+          
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
@@ -86,13 +87,13 @@
                   <a class="nav-link" href="contact.html">Ingresa tu pedido</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="service.html">Rastea tu pedido</a>
+                  <a class="nav-link" href="service.html">Rastrea tu pedido</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html"> Sobre nosotros</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
+                  <a class="nav-link" href="https://www.mevalini.com/admin-order/#/"> <i class="fa fa-user" aria-hidden="true"></i> INICIAR SESIÓN</a>
                 </li>
               </ul>
             </div>
@@ -123,7 +124,7 @@
           <div class="form_container">
             <form id="myForm" >
               <div>
-                <h5>Consulta en linea <a href="#" id="getRuc"><i class="fa fa-search"></i></a></h5>
+                <h5>Consulta en LÍNEA <a href="#" id="getRuc"><i class="fa fa-search"></i></a></h5>
                 <br>
                 <input type="text" id="cedula" maxlength="10" name="cedula" placeholder="Cedula" />
               </div>
@@ -185,13 +186,13 @@
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call + 593 99 181 9910
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  info@mevalini.com
+                  mevalinisas@gmail.com
                 </span>
               </a>
             </div>
@@ -217,7 +218,7 @@
               Recuerda
             </h4>
             <p>
-          Es importante que al registrar tu producto se ingrese toda la informacion solicitada para que 
+          Es importante que al registrar tu producto se ingrese toda la información correspondiente para que de esta manera podamos tomar las medidas necesarias a la solicitud de cada paquetería. 
             </p>
           </div>
         </div>
@@ -248,9 +249,9 @@
         </div>
         <div class="col-md-6 col-lg-3 info_col ">
           <h4>
-            Rastea tu pedido
+            Rastrea tu pedido
           </h4>
-          <form action="#">
+          <form action="service.html">
             <input type="text" placeholder="Ingresa el codigo de tu pedido" />
             <button type="submit">
               Buscar 
@@ -284,8 +285,8 @@
   </script>
   <!-- End Google Map -->
   <script>
- function submitForm() {
-    // Collect form values
+function submitForm() {
+    // Recopilar los valores del formulario
     var formData = {
         cedula: $("#cedula").val(),
         nombre: $("#nombre").val(),
@@ -296,21 +297,62 @@
         comentario: $("#comentario").val()
     };
 
-    // Send data to PHP script using AJAX
+    // Prevenir el envío predeterminado del formulario
+    event.preventDefault();
+
+    // Enviar los datos al script PHP mediante AJAX
     $.ajax({
         type: "POST",
-        url: "process_form.php", // Update the URL accordingly
+        url: "https://www.mevalini.com/API/insert.php", // Actualiza la URL según sea necesario
         data: formData,
         success: function(response) {
             console.log(response);
-            // Handle the response from the server (if needed)
+
+            // Verificar si el registro fue exitoso
+            if (response.status === 'success') {
+                // Mostrar un mensaje de éxito
+                alert('Registro exitoso!');
+
+                // Recargar la página actual
+                window.location.reload();
+            } else {
+                // Manejar otras respuestas o errores
+                alert('Error en el registro. ' + response.message); // Mostrar el mensaje de error del servidor
+            }
         },
-        error: function(error) {
-            console.error(error);
-            // Handle errors (if any)
+        error: function(jqXHR, textStatus, errorThrown) {
+            console.error(jqXHR);
+            console.error(textStatus);
+            console.error(errorThrown);
+
+            // Manejar errores (si los hay)
+            alert('Se produjo un error. Por favor, inténtalo de nuevo más tarde. ' + errorThrown); // Mostrar el mensaje de error detallado
         }
     });
 }
+</script>
+<script>
+  document.getElementById("getRuc").addEventListener("click", function () {
+      // Obtiene el valor de la cédula desde el input
+      var cedula = document.getElementById("cedula").value;
+
+      // Construye la URL de la API con la cédula
+      var api_url = "https://begroupec.info/api-cedula/consultaCedula.php?cedula=" + cedula;
+
+      // Realiza la consulta a la API
+      fetch(api_url)
+          .then(response => response.json())
+          .then(data => {
+              // Guarda los datos en variables
+              var identificacion = data.identificacion;
+              var razonsocial = data.razonsocial;
+
+              // Asigna el valor al input con el id "nombre"
+              document.getElementById("nombre").value = razonsocial;
+      
+          })
+          .catch(error => console.error("Error al realizar la consulta a la API:", error));
+  });
 </script>
 </body>
 
